Fixed a bug where chat panel scroll bar would become unclickable
Workspace users panel padding was overlapping the scroll bar even
when it was hidden.

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -415,7 +415,7 @@ WS-USER PANEL
   height: 100%;
   z-index: 3;
   overflow-x: hidden;
-  padding: 20px 20px 65px 20px;
+  padding: 20px 0 65px 0;
   background-color: $primary-container;
   opacity: 0;
   border-left: 1px solid $theme-med;
